# resize-save-new-gif

./: CMakeLists.txt  README.md  Utility.h  main.cpp
Controller/: ActionController.cpp  ActionController.h  ExportController.cpp  ExportController.h  FeatureController.cpp  FeatureController.h  ImageController.cpp  ImageController.h  ModuleController.cpp  ModuleController.h
GuiComponent/: AspectRatioFeature.qml  CMakeLists.txt  CropFeature.qml  ImageContent.qml  MainWindow.qml  SideBar.qml
GuiComponent/Component/: CustomAnimatedImage.qml  CustomButton.qml  CustomProgressBar.qml  CustomTextField.qml  FeatureButton.qml  RowFeatureButtons.qml  SidebarIconButton.qml
Model/: BottomBarModel.cpp  BottomBarModel.h  ImageModel.cpp  ImageModel.h  SideBarModel.cpp  SideBarModel.h
Model/Action/: AbstractAction.h  AbstractActionModel.cpp  AbstractActionModel.h  DeleteAction.cpp  DeleteAction.h  DeleteActionModel.cpp  DeleteActionModel.h  FileExplorerAction.cpp  FileExplorerAction.h  FileExplorerActionModel.cpp  FileExplorerActionModel.h  RefreshAction.cpp  RefreshAction.h  RefreshActionModel.cpp  RefreshActionModel.h
Model/Feature/: AbstractFeatureModel.cpp  AbstractFeatureModel.h  AspectRatioFeatureModel.cpp  AspectRatioFeatureModel.h  CropFeatureModel.cpp  CropFeatureModel.h  DetailAspectRatioFeatureModel.cpp  DetailAspectRatioFeatureModel.h  DetailCropFeatureModel.cpp  DetailCropFeatureModel.h
Model/Transform/: AbstractTransformListModel.h  AbstractTransformModel.cpp  AbstractTransformModel.h  FlipTransformListModel.cpp  FlipTransformListModel.h  FlipTransformModel.cpp  FlipTransformModel.h  ResizeTransformListModel.cpp  ResizeTransformListModel.h  ResizeTransformModel.cpp  ResizeTransformModel.h  RotationTransformListModel.cpp  RotationTransformListModel.h  RotationTransformModel.cpp  RotationTransformModel.h
Utility/: ActionTypeClass.h  FeatureTypeClass.h  ImageTypeClass.h  TransformTypeClass.h
WrapperGifLib/: CMakeLists.txt  Gif89aReader.cpp  Gif89aReader.h  GifUtility.h  IGifConverter.h  IGifDebugger.h
WrapperGifLib/Implementation/: GifConverterImpl.cpp  GifConverterImpl.h  IGifDebugger.cpp
WrapperGifLib/giflib-5.2.2/lib/: libgif.lib  libutil.lib
